# HS

./: .gitignore  .gitmodules  AutoTrack.cpp  AutoTrack.hpp  BlobParam.cpp  README.md  common.hpp  main.cpp
analysis/: ArrangePoints.m  PlotHeadandThorax.m  avi2wmv.sh  commented2uncommented.txt  fastfour.m  main.cpp  misc commands.txt
digitization/: AutoTrack.cpp  AutoTrack.hpp  BlobParam.cpp  BlobParam.hpp  CMakeLists.txt  cmdline.h  common.hpp  main.cpp
digitizationPython/: digitizeHSvideo.py  readCine.py  updateffmpeg.py
processing/: annotateVideo.py  cine2mp4  processDigitizedData.py  video2wmv
